--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "license": "MIT",
   "main": "components/UniversalDataViewer",
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
-  },
   "scripts": {
     "start": "PORT=6001 react-scripts start",
     "build": "npm run build:babel && cp ./package.json ./dist/package.json",
@@ -35,6 +30,9 @@
     ]
   },
   "devDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
     "@material-ui/core": "^4.2.0",
