--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "react-nlp-annotate": "^0.1.18",
     "react-scripts": "3.0.1",
     "spelling": "^2.0.1"
+  },
+  "dependencies": {
+    "brace": "^0.11.1",
+    "react-ace": "^7.0.4"
   }
 }
