--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "spelling": "^2.0.1"
   },
   "dependencies": {
+    "@rehooks/local-storage": "^1.6.0",
     "brace": "^0.11.1",
-    "react-ace": "^7.0.4"
+    "react-ace": "^7.0.4",
+    "react-dropzone": "^10.1.8"
   }
 }
