--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.19",
-    "@material-ui/styles": "^4.2.0",
+    "@material-ui/lab": "^4.0.0-alpha.25",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
@@ -44,16 +43,18 @@
     "material-survey": "^1.0.32",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-image-annotate": "^0.1.17",
+    "react-image-annotate": "^0.1.24",
     "react-markdown": "^4.1.0",
     "react-nlp-annotate": "^0.1.18",
     "react-scripts": "3.0.1",
     "spelling": "^2.0.1"
   },
   "dependencies": {
+    "@material-ui/styles": "^4.3.3",
     "@rehooks/local-storage": "^1.6.0",
     "brace": "^0.11.1",
     "react-ace": "^7.0.4",
-    "react-dropzone": "^10.1.8"
+    "react-dropzone": "^10.1.8",
+    "universal-data-tool": "^0.1.8"
   }
 }
