--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "brace": "^0.11.1",
     "react-ace": "^7.0.4",
     "react-dropzone": "^10.1.8",
-    "react-image-annotate": "^0.1.33"
+    "react-image-annotate": "^0.1.33",
+    "react-select": "^3.0.8"
   }
 }
