copy cname into github pages

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
-    "gh-pages": "npm run build:app && gh-pages -d build"
+    "gh-pages": "npm run build:app && cp ./CNAME ./build/CNAME && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
