--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@material-ui/styles": "^4.3.3",
     "brace": "^0.11.1",
     "react-ace": "^7.0.4",
+    "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
     "react-image-annotate": "^0.1.33",
     "react-select": "^3.0.8"
