--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
     "react-image-annotate": "^0.1.33",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "styled-components": "^5.0.0"
   }
 }
