--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build:babel && cp ./package.json ./dist/package.json",
     "build:babel": "NODE_ENV=production babel ./src --out-dir=./dist",
     "build:app": "react-scripts build",
-    "dist": "npm run build && cd dist && npm publish",
+    "release": "npm run build && cd dist && npm publish",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
