--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "universal-data-tool",
   "version": "0.2.1",
   "license": "MIT",
-  "main": "components/UniversalDataViewer",
+  "main": "desktop/main.js",
   "homepage": "https://universaldatatool.com",
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "start": "PORT=6001 react-scripts start",
     "build": "npm run build:babel && cp ./package.json ./dist/package.json",
     "build:babel": "NODE_ENV=production babel ./src --out-dir=./dist",
     "build:app": "react-scripts build",
-    "build:desktop": "REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build",
-    "release": "npm run build && cd dist && npm publish",
+    "build:desktop": "REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder --mac --windows --linux",
+    "start:desktop": "electron ./desktop",
+    "release:lib": "npm run build && cd dist && npm publish",
+    "release:desktop": "electron-builder --mac --windows --linux --publish always",
+    "release": "npm run release:lib && npm run release:desktop",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
@@ -41,6 +45,8 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "chroma-js": "^2.0.4",
+    "electron": "^8.0.0",
+    "electron-builder": "^22.3.2",
     "gh-pages": "^2.1.1",
     "material-survey": "^1.0.32",
     "react": "^16.8.6",
@@ -51,7 +57,7 @@
     "spelling": "^2.0.1"
   },
   "dependencies": {
-    "@material-ui/styles": "^4.3.3",
+    "@material-ui/styles": "^4.9.0",
     "brace": "^0.11.1",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
