minor build process updates

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
     "start": "PORT=6001 react-scripts start",
-    "build": "npm run build:babel && cp ./package.json ./lib/package.json",
-    "build:babel": "NODE_ENV=production babel ./src --out-dir=./lib",
+    "build": "npm run build:babel && npm run build:desktop",
+    "build:babel": "NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
     "build:web": "react-scripts build",
     "build:desktop": "REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder --linux --mac --windows",
     "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
-    "release:desktop": "electron-builder --mac --windows --linux --publish always",
+    "release:desktop": "npm run build:desktop && electron-builder --mac --windows --linux --publish always",
     "release": "npm run release:lib && npm run release:desktop",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6002 -s public",
