--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,17 @@ on: [push]
 
 jobs:
   build:
+    runs-on: ${{ matrix.os }}
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v2
-    # Helpful reference https://github.com/samuelmeuli/mini-diary/blob/master/.github/workflows/release.yml
-    - name: Electron Builder Action
-      uses: samuelmeuli/action-electron-builder@v1.3.0
-      with:
-        github_token: ${{ secrets.github_token }}
-        release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      - uses: actions/checkout@v2
+      # Helpful reference https://github.com/samuelmeuli/mini-diary/blob/master/.github/workflows/release.yml
+      - name: Electron Builder Action
+        uses: samuelmeuli/action-electron-builder@v1.3.0
+        with:
+          github_token: ${{ secrets.github_token }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
