windows cross-env fix

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "homepage": "https://universaldatatool.com",
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
-    "start": "PORT=6001 react-scripts start",
+    "start": "cross-env PORT=6001 react-scripts start",
     "build": "npm run build:babel && npm run build:desktop",
-    "build:babel": "NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
+    "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
     "build:web": "react-scripts build",
-    "build:desktop": "REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder --linux --mac --windows",
+    "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build",
     "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && electron-builder --mac --windows --linux --publish always",
