add missing dep

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && electron-builder --mac --windows --linux --publish always",
-    "release": "npm run release:lib && npm run release:desktop",
+    "release": "npm run release:desktop",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
@@ -45,6 +45,7 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "chroma-js": "^2.0.4",
+    "cross-env": "^7.0.0",
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
     "gh-pages": "^2.1.1",
