--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
     "brace": "^0.11.1",
+    "downloadjs": "^1.4.7",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
