--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:babel && npm run build:desktop",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
     "build:web": "react-scripts build",
-    "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build",
+    "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
     "start:desktop": "USE_DEV_SERVER=yes electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && electron-builder --mac --windows --linux --publish always",
@@ -48,6 +48,7 @@
     "cross-env": "^7.0.0",
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
+    "electron-builder-notarize": "^1.1.2",
     "gh-pages": "^2.1.1",
     "material-survey": "^1.0.32",
     "react": "^16.8.6",
@@ -71,8 +72,10 @@
   "build": {
     "appId": "com.universaldatatool",
     "productName": "Universal Data Tool",
+    "afterSign": "electron-builder-notarize",
     "mac": {
-      "category": "public.app-category.developer-tools"
+      "category": "public.app-category.developer-tools",
+      "hardenedRuntime": true
     },
     "dmg": {
       "icon": false
