--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
     "build:web": "react-scripts build",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
-    "start:desktop": "USE_DEV_SERVER=yes electron ./desktop",
+    "start:desktop:dev": "USE_DEV_SERVER=yes electron ./desktop",
+    "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && electron-builder --mac --windows --linux --publish always",
     "release": "npm run release:desktop",
@@ -86,6 +87,10 @@
       ],
       "category": "Development"
     },
-    "extends": null
+    "extends": null,
+    "files": [
+      "**/*",
+      "build/"
+    ]
   }
 }
