--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
-    "@material-ui/core": "^4.6.1",
-    "@material-ui/icons": "^4.2.1",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addons": "^5.3.14",
+    "@storybook/react": "^5.3.14",
     "chroma-js": "^2.0.4",
     "cross-env": "^7.0.0",
     "electron": "^8.0.0",
@@ -63,9 +63,12 @@
     "@material-ui/styles": "^4.9.0",
     "brace": "^0.11.1",
     "downloadjs": "^1.4.7",
+    "duration": "^0.2.2",
+    "moment": "^2.24.0",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
+    "react-icons": "^3.9.0",
     "react-image-annotate": "^0.1.39",
     "react-select": "^3.0.8",
     "styled-components": "^5.0.0"
