--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: Build/Release
 
-on:
-  push:
-    tags:
-      - "*"
+on: ["push"]
 
 jobs:
   build:
@@ -24,7 +21,7 @@ jobs:
       # Helpful reference https://github.com/samuelmeuli/mini-diary/blob/master/.github/workflows/release.yml
       - name: Electron Builder Action
         uses: samuelmeuli/action-electron-builder@v1.3.0
-        if: contains(github.ref, "v0.")
+        if: startsWith(github.ref, 'v0.')
         with:
           github_token: ${{ secrets.github_token }}
           mac_certs: ${{ secrets.mac_certs }}
