--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "bent": "^7.1.0",
     "brace": "^0.11.1",
     "downloadjs": "^1.4.7",
     "duration": "^0.2.2",
+    "fast-json-patch": "^3.0.0-1",
     "moment": "^2.24.0",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
