--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "react-icons": "^3.9.0",
     "react-image-annotate": "^0.1.39",
     "react-select": "^3.0.8",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "use-event-callback": "^0.1.0"
   },
   "build": {
     "appId": "com.universaldatatool",
