--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "aws-amplify": "^2.2.6",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
     "duration": "^0.2.2",
