Added Import from google drive feature with google picker api

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
     "react-nlp-annotate": "^0.1.21",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "spelling": "^2.0.1"
   },
   "dependencies": {
