Feature: Convert Videos into Images + Download URLs (#34)
* fix format for video segmentation, add transform page, introduce convert
video keyframes

* fix video segmentation format loading

* download urls and convert video frames to images with ffmpeg

--- a/package.json
+++ b/package.json
@@ -61,19 +61,23 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "any-shell-escape": "^0.1.1",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
+    "download-file": "^0.1.5",
     "duration": "^0.2.2",
     "fast-json-patch": "^3.0.0-1",
+    "ffmpeg-static": "^4.0.1",
     "in-browser-download": "^2.0.0",
     "jac-format": "^1.0.7",
+    "js-md5": "^0.7.3",
     "moment": "^2.24.0",
     "posthog-js": "^1.0.4",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
     "react-icons": "^3.9.0",
-    "react-image-annotate": "^0.2.1",
+    "react-image-annotate": "^0.2.3",
     "react-select": "^3.0.8",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
