--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "@sentry/browser": "^5.15.4",
     "any-shell-escape": "^0.1.1",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
+    "detect-browser": "^5.0.0",
     "download-file": "^0.1.5",
     "duration": "^0.2.2",
     "fast-json-patch": "^3.0.0-1",
