make prettier run w/o npm install to save time

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: 12
       - name: Run Prettier Test
-        run: npm run prettier:test
+        run: npx prettier --check "src/**/*.js"
