--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,7 @@ name: Test
 on: push
 jobs:
   test:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Test
     runs-on: ubuntu-18.04
     steps:
