--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env PORT=6001 react-scripts start",
     "build": "npm run build:babel && npm run build:desktop",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json",
-    "build:web": "react-scripts build",
+    "build:web": "CI=false react-scripts build",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
     "start:desktop:dev": "USE_DEV_SERVER=yes electron ./desktop",
     "start:desktop": "electron ./desktop",
