--- a/.github/workflows/release-on-master.yml
+++ b/.github/workflows/release-on-master.yml
@@ -29,6 +29,4 @@ jobs:
         run: npm run build:web
       - name: Publish github pages
         run: |
-          git config --global user.name "github-action"
-          git config --global user.email "github-action@universaldatatool.com"
-          npm run gh-pages
+          npx gh-pages -d -u "github-actions-bot <support+actions@github.com>"
