fix: typo in gh-pages releases

--- a/.github/workflows/release-on-master.yml
+++ b/.github/workflows/release-on-master.yml
@@ -28,5 +28,4 @@ jobs:
       - name: Build
         run: npm run build:web
       - name: Publish github pages
-        run: |
-          npx gh-pages -d -u "github-actions-bot <support+actions@github.com>"
+        run: npx gh-pages -d -u "github-actions-bot <support+actions@github.com>
