--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -1,10 +1,13 @@
 name: Build Desktop Application
 
-on: create
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
-    if: "contains(github.ref, '/tags/v')"
+    if: "contains(github.event.head_commit.message, 'chore(release)')"
     runs-on: ${{ matrix.os }}
 
     strategy:
