--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -1,9 +1,6 @@
 name: Build Desktop Application
 
-on:
-  push:
-    tags:
-      - "*"
+on: push
 
 jobs:
   build:
@@ -30,7 +27,7 @@ jobs:
           github_token: ${{ secrets.github_token }}
           mac_certs: ${{ secrets.mac_certs }}
           mac_certs_password: ${{ secrets.mac_certs_password }}
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          release: true
         env:
           # macOS notarization API key
           API_KEY_ID: ${{ secrets.api_key_id }}
