--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "spelling": "^2.0.1"
   },
   "dependencies": {
-    "react-scripts": "^3.4.1",
     "@material-ui/styles": "^4.9.0",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "^5.15.4",
     "any-shell-escape": "^0.1.1",
+    "aws-amplify": "^3.0.6",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
     "detect-browser": "^5.0.0",
@@ -84,6 +84,7 @@
     "react-dropzone": "^10.1.8",
     "react-icons": "^3.9.0",
     "react-image-annotate": "^0.2.4",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
