Changement de Prettier

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,3 @@
 {
-    "presets": [
-        [ "react-app", { "absoluteRuntime": false } ]
-    ]
+  "presets": [["react-app", { "absoluteRuntime": false }]]
 }
