Update @seveibar as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/1910070?v=4",
       "profile": "https://twitter.com/seveibar",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     }
   ],
