Update @seveibar as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,8 @@
       "profile": "https://twitter.com/seveibar",
       "contributions": [
         "code",
-        "doc"
+        "doc",
+        "review"
       ]
     }
   ],
