--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,7 +27,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/22892227?v=4",
       "profile": "http://puskuruk.github.io",
       "contributions": [
-        "code"
+        "code",
+        "review"
       ]
     }
   ],
