--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -30,6 +30,15 @@
         "code",
         "review"
       ]
+    },
+    {
+      "login": "CedricJean",
+      "name": "CedricJean",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/63243979?v=4",
+      "profile": "https://github.com/CedricJean",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
