--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron-builder-notarize": "^1.1.2",
     "gh-pages": "^2.1.1",
     "material-survey": "^1.0.32",
+    "prettier": "2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
@@ -77,7 +78,6 @@
     "js-md5": "^0.7.3",
     "moment": "^2.24.0",
     "posthog-js": "^1.0.4",
-    "prettier": "^2.0.2",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
