--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build-storybook": "build-storybook -s public",
     "gh-pages": "npm run build:web && cp ./CNAME ./build/CNAME && gh-pages -d build",
     "prettier": "prettier --write \"src/**/*.js\"",
-    "prettier:test": "prettier --check \"src/**/*.js\""
+    "test:prettier": "prettier --check \"src/**/*.js\"",
+    "test:integration": "npm run cypress"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +50,7 @@
     "@storybook/react": "^5.3.14",
     "chroma-js": "^2.0.4",
     "cross-env": "^7.0.0",
+    "cypress": "^4.4.0",
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
     "electron-builder-notarize": "^1.1.2",
