--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "seedrandom": "^3.0.5",
     "styled-components": "^5.0.0",
     "use-event-callback": "^0.1.0",
+    "wavesurfer.js": "^3.3.3",
     "ytdl-core": "^2.0.1"
   },
   "build": {
