--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "^5.15.4",
     "any-shell-escape": "^0.1.1",
+    "axios": "^0.19.2",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
     "detect-browser": "^5.0.0",
@@ -79,6 +80,7 @@
     "duration": "^0.2.2",
     "fast-json-patch": "^3.0.0-1",
     "ffmpeg-static": "^4.0.1",
+    "form-data": "^3.0.0",
     "in-browser-download": "^2.0.0",
     "jac-format": "^1.1.3",
     "js-md5": "^0.7.3",
