--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
     "start": "cross-env PORT=6001 react-scripts start",
-    "prepublishOnly": "npm run build:babel",
-    "build": "npm run build:babel && npm run build:desktop",
+    "build": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json && node ./lib/lib/fix-deps.js",
+    "build:vanilla": "parcel build -d ./lib -o vanilla.js ./src/vanilla/index.js",
+    "build:vanilla:dev": "parcel ./src/vanilla/index.js",
     "build:web": "CI=false react-scripts build",
     "build:desktop": "cross-env CI=false REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
+    "prepublishOnly": "npm run build:babel && npm run build:vanilla",
     "start:desktop:dev": "USE_DEV_SERVER=yes electron ./desktop",
     "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
@@ -99,6 +101,7 @@
     "seedrandom": "^3.0.5",
     "styled-components": "^5.0.0",
     "use-event-callback": "^0.1.0",
+    "wavesurfer.js": "^3.3.3",
     "ytdl-core": "^2.0.1"
   },
   "build": {
