--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "postinstall": "electron-builder install-app-deps",
     "start": "cross-env PORT=6001 react-scripts start",
     "build": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
+    "build:lib": "npm run build:babel && npm run build:vanilla",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json && node ./lib/lib/fix-deps.js",
     "build:vanilla": "parcel build -d ./lib -o vanilla.js ./src/vanilla/index.js",
     "build:vanilla:dev": "parcel ./src/vanilla/index.js",
     "build:web": "CI=false react-scripts build",
     "build:desktop": "cross-env CI=false REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
-    "prepublishOnly": "npm run build:babel && npm run build:vanilla",
     "start:desktop:dev": "USE_DEV_SERVER=yes electron ./desktop",
     "start:desktop": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && cross-env EP_RELEASE=true electron-builder --linux --publish always",
-    "release": "npm run release:desktop",
+    "release": "npm run release:desktop && npm run release:lib",
     "test": "ava **/*.test.js",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
