feat: Feature cognito s3 stagiaire (#103)
* adding aws cognito and s3 support

* remove duplicate import cat and move import s3

* navigate/display S3 bucket

* version ?

* refetch S3 on user change

* table

* merge

* ignore aws config

* ran prettier

* s3 upload

* radio button onselected working

* sub data table

* import issue resolve

* Récupération des URLs des fichiers désirés

* commentaire de la tentative d'ajout des samples

* Ajout des samples fonctionnel

* suppression de console log

* add default case and delete useless function

* Transfert des images sur le serv AWS (Imparfait)

* Upload des fichiers fonctionnels

* Création du dossier du projet séparément

* Récupéretion des annotations

* Les annotations s'affichent sur transfert

* video et videoannotation upload

* Vérif de l'extension

* Deux fois styled component

* Set interface type lors d'un fetch S3

* Résolution du bug de l'upload de vidéo

* Vérif des annotations

* élimine les console log oubliés

* Ménage + Function Recognize extension

* ménage

* ménage

* ménage

* ménage + Sauvegarde des dernières modifications correctement

* fix undefined + debut gestion fileName

* Vérif undefined

* run prettier

* nom automatiquement affiché

* run Prettier

* Élimination d'un effet de bord

* attend le changement du fichier pour faire le second

* modif pour intégration des changements provenant du fork originel

* Vérif si doit updater AWS (Début)

* Vérif si doit updater AWS (Suite 1)

* run prettier

* Fin Vérif

* Prettier

* Élement graphique + 1 arg de moins sur changeFile

* traitement des annotations + centralisation de Storage.list

* Prettier

* Choix du type de fichier à télécharger

* dernière date de modification

* prettier

* disable fichier non autorisé selon le type de projet

* prettier

* Disable button selon le type de fichier dans le taskData

* prettier


--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,8 @@ desktop/node_modules
 
 /lib
 
+src/components/LocalStorageApp/myAWSconfig.js
+package-lock.json
+src/components/LocalStorageApp/myAWSconfig.js
 .env
 .cache
