Added an extension to cypress to finding visual diffs

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "chroma-js": "^2.0.4",
     "cross-env": "^7.0.0",
     "cypress": "^4.4.0",
+    "cypress-image-snapshot": "^3.1.1",
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
     "electron-builder-notarize": "^1.1.2",
