Now visual regression test fails silently :tada:

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "prettier --write \"src/**/*.js\"",
     "test:prettier": "prettier --check \"src/**/*.js\"",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
-    "test:integration": "./node_modules/cypress/bin/cypress run"
+    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false"
   },
   "eslintConfig": {
     "extends": "react-app"
