fix various changes from #137, add eslint test and made it pass

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,5 @@ jobs:
           node-version: 12
       - name: Run Prettier Test
         run: npx prettier --check "src/**/*.js"
+      - name: Run Lint Test
+        run: npx eslint src
