combine ci tests and make eslint test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test
-on: ["push", "pull_request"]
+on: ["pull_request"]
 jobs:
-  test:
+  iscodeclean:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Test
     runs-on: ubuntu-18.04
@@ -15,4 +15,25 @@ jobs:
       - name: Run Prettier Test
         run: npx prettier --check "src/**/*.js"
       - name: Run Lint Test
-        run: npx eslint src
+        run: |
+          rm package.json
+          rm package-lock.json
+          npm init -y
+          npm install create-react-app
+          npx eslint src
+  cypress-run:
+    needs: iscodeclean
+    runs-on: ubuntu-16.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v1
+        with:
+          start: npm run start
+          wait-on: http://localhost:6001
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
