--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           rm package.json
           rm package-lock.json
           npm init -y
-          npm install create-react-app
+          npm install react-scripts
           echo '{"extends": "react-app"}' > .eslintrc
           npx eslint src
   cypress-run:
