--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "electron-builder-notarize": "^1.1.2",
     "gh-pages": "^2.1.1",
     "material-survey": "^1.0.32",
+    "parcel": "^1.12.4",
     "prettier": "2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
