Added cypress aws credential enviroment variables
Change secret variable names

Change credential keys to uppercase

Change enviroment vars to uppercase

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,3 +38,11 @@ jobs:
           record: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_AWS_COGNITO_AWSS3_BUCKET: ${{ secrets.CYPRESS_AWS_COGNITO_AWSS3_BUCKET }}
+          CYPRESS_AWS_COGNITO_AWSS3_REGION: ${{ secrets.CYPRESS_AWS_COGNITO_AWSS3_REGION }}
+          CYPRESS_AWS_COGNITO_IDENTITY_POOL_ID: ${{ secrets.CYPRESS_AWS_COGNITO_IDENTITY_POOL_ID }}
+          CYPRESS_AWS_COGNITO_PASSWORD: ${{ secrets.CYPRESS_AWS_COGNITO_PASSWORD }}
+          CYPRESS_AWS_COGNITO_REGION: ${{ secrets.CYPRESS_AWS_COGNITO_REGION }}
+          CYPRESS_AWS_COGNITO_USERNAME: ${{ secrets.CYPRESS_AWS_COGNITO_USERNAME }}
+          CYPRESS_AWS_COGNITO_USER_POOL_ID: ${{ secrets.CYPRESS_AWS_COGNITO_USER_POOL_ID }}
+          CYPRESS_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID: ${{ secrets.CYPRESS_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID }}
