--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
     "react-dropzone": "^10.1.8",
+    "react-hotkeys": "^2.0.0",
     "react-icons": "^3.9.0",
     "react-image-annotate": "^1.0.6",
     "react-scripts": "^3.4.1",
