--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:vanilla:dev": "parcel ./src/vanilla/index.js",
     "build:web": "react-scripts build",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
-    "start:desktop:dev": "USE_DEV_SERVER=yes electron ./desktop",
-    "start:desktop": "electron ./desktop",
+    "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
+    "start:desktop:build": "electron ./desktop",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && cross-env EP_RELEASE=true electron-builder --linux --publish always",
     "release": "npm run release:desktop && npm run release:lib",
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@storybook/addon-actions": "^5.3.19",
@@ -56,6 +57,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "ava": "^3.7.0",
     "chroma-js": "^2.0.4",
+    "concurrently": "^5.2.0",
     "cross-env": "^7.0.0",
     "cypress": "^4.4.0",
     "cypress-file-upload": "^4.0.6",
